--- a/.github/workflows/acr-build-push-template.yaml
+++ b/.github/workflows/acr-build-push-template.yaml
@@ -52,7 +52,7 @@ jobs:
 
 
       - name: Scan Docker image with Trivy
-        uses: aquasecurity/trivy-action@v0.16.0
+        uses: uses: aquasecurity/trivy-action@0.33.1
         with:
           image-ref: ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
           format: table
