--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Debug secrets
+        run: |
+          echo "DOCKERHUB_USERNAME length: ${#{{ secrets.DOCKERHUB_USERNAME }}}"
+          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
