--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,9 +26,12 @@ jobs:
 
       - name: Debug secrets
         run: |
-          echo "DOCKERHUB_USERNAME length: ${#{{ secrets.DOCKERHUB_USERNAME }}}"
-          echo "DOCKERHUB_TOKEN length: ${#{{ secrets.DOCKERHUB_TOKEN }}}"
-
+          echo "Docker username length: ${#DOCKERHUB_USERNAME}"
+          echo "Docker token length: ${#DOCKERHUB_TOKEN}"
+        env:
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
