--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -31,10 +31,17 @@ jobs:
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Debug DNS
+        run: |
+          nslookup registry-1.docker.io
+          ping -c 2 registry-1.docker.io
+
           
       - name: Login to Docker Hub
         run: |
-          echo $DOCKERHUB_TOKEN | docker login --username $DOCKERHUB_USERNAME --password-stdin
+          echo $DOCKERHUB_TOKEN | docker login docker.io --username $DOCKERHUB_USERNAME --password-stdin
+
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
