--- a/.github/workflows/acr-build-push-template.yaml
+++ b/.github/workflows/acr-build-push-template.yaml
@@ -4,6 +4,7 @@ on:
   workflow_call:
     inputs:
       image_tag:
+        description: 'Docker image tag (use GitHub run ID from caller)'
         required: true
         type: string
     secrets:
@@ -25,15 +26,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      # Checkout repository
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      # Login to Azure using Service Principal
       - name: Azure Login
         uses: azure/login@v2
         with:
+          auth-type: service-principal
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+      # Login to Azure Container Registry
       - name: Login to ACR
         uses: azure/docker-login@v2
         with:
@@ -41,12 +48,22 @@ jobs:
           username: ${{ secrets.AZURE_CLIENT_ID }}
           password: ${{ secrets.AZURE_CLIENT_SECRET }}
 
+      # Build Docker image
       - name: Build Docker image
         run: |
           docker build \
             -t ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ inputs.image_tag }} .
 
+      # Optional: Scan Docker image with Trivy
+      - name: Scan Docker image with Trivy
+        uses: aquasecurity/trivy-action@0.33.1
+        with:
+          image-ref: ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ inputs.image_tag }}
+          format: table
+          exit-code: 1
+          ignore-unfixed: true
+
+      # Push Docker image to ACR
       - name: Push Docker image
         run: |
-          docker push \
-            ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ inputs.image_tag }}
+          docker push ${{ secrets.ACR_NAME }}.azurecr.io/${{ secrets.IMAGE_NAME }}:${{ inputs.image_tag }}
