--- a/.github/workflows/acr-build-push-template.yaml
+++ b/.github/workflows/acr-build-push-template.yaml
@@ -5,20 +5,14 @@ on:
     inputs:
       image_tag:
         required: true
-        type: string   # this will come from caller workflow, e.g., GitHub run ID
+        type: string
     secrets:
       IMAGE_NAME:
         required: true
       ACR_NAME:
         required: true
-      AZURE_CLIENT_ID:
-        required: true
-      AZURE_CLIENT_SECRET:
-        required: true
-      AZURE_TENANT_ID:
-        required: true
-      AZURE_SUBSCRIPTION_ID:
-        required: true
+      AZURE_CREDENTIALS:
+        required: true   # JSON secret containing clientId, clientSecret, tenantId, subscriptionId
 
 jobs:
   build-and-push:
@@ -31,18 +25,14 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          auth-type: SERVICE_PRINCIPAL
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Login to ACR
         uses: azure/docker-login@v2
         with:
           login-server: ${{ secrets.ACR_NAME }}.azurecr.io
-          username: ${{ secrets.AZURE_CLIENT_ID }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }}
+          username: ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientId }}
+          password: ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientSecret }}
 
       - name: Build Docker image
         run: |
